# biosignal

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LESSONS_LEARNED.md  PRD.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
app/: __init__.py  main.py
app/api/: analysis.py  config.py  daily.py  export.py  garmin_auth.py  raw.py  settings.py  sync.py
app/core/: config.py  database.py
app/models/: __init__.py  database.py  sync_log.py
app/schemas/: responses.py
app/services/: analysis.py  features.py  garmin.py  habitsync.py  parsers.py  scheduler.py  sync.py
app/templates/: base.html  correlations.html  daily.html  garmin_setup.html  insights.html  overview.html  settings.html  trends.html
data/: energy_tracker.db
energy_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: 2d6ba0299cc3_initial_schema.py  2f297e1ff2b9_add_sync_log_table.py
scripts/: test_garmin_fetch.py
static/css/: style.css
static/js/: correlations.js  daily.js  garmin_setup.js  habit-config.js  insights.js  overview.js  trends.js
tests/: conftest.py  test_analysis.py  test_api_daily.py  test_api_export.py  test_api_sync.py  test_features.py  test_habitsync.py  test_models.py  test_parsers.py  test_settings.py  test_spo2_features.py  test_trends_metadata.py
tests/fixtures/: garmin_activities.json  garmin_body_battery.json  garmin_heart_rate.json  garmin_hrv.json  garmin_sleep.json  garmin_spo2.json  garmin_steps.json  (+3 more)
