[project]
name = "energy-tracker"
version = "0.1.0"
description = "Energy Correlation Tracker - Correlates Garmin biometric data with lifestyle habits"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "garminconnect>=0.2.38",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
